--- a/Peder/underUdvikling/loginStyle.css
+++ b/Peder/underUdvikling/loginStyle.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(rgba(0,255,0,0),rgba(0,0,0,0.6)),url(Billeder/AOD11_digitaldk01.jpg);
+    background-image: linear-gradient(rgba(0,255,0,0),rgba(0,0,0,0.6)),url(../../Billeder/AOD11_digitaldk01.jpg);
     height: 100vh;
     background-size:cover;
     background-position: center
