--- a/CalendarStyle.css
+++ b/CalendarStyle.css
@@ -19,7 +19,6 @@ body {
 .calendar {
     margin: auto;
     width: 600px;
-    height: 400px;
     background-color: #fff;
     box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.2);
 }
@@ -27,6 +26,7 @@ body {
 .month {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     text-align: center;
     background-color: #2ecc71;
@@ -41,19 +41,15 @@ body {
     padding: 7px 0;
 }
 
-.weekends div {
-    width: 14.28%;
-    text-align: center;
-}
 
 .days {
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
     font-weight: 300;
     padding: 10px 0;
 }
-.days div{
+
+.days div {
     margin-bottom: 10px;
     padding: 10px 0;
     transition: all 0.4s;
@@ -61,16 +57,43 @@ body {
 
 .weekends div,
 .days div {
-    widows: 14.28%;
+    width: 14.28%;
     text-align: center;
 }
 
 .days div:hover {
     background-color: #dfe6e9;
+    cursor: pointer;
 }
 
 .today {
     background-color: #27ae60;
     color: #fff;
-
 }
+    .prev_date {
+        color: #999;
+    }
+
+    #month {
+        font-size: 30px;
+        font-weight: 500;
+    }
+
+    .prev,
+    .next {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        font-size: 23px;
+        width: 50px;
+        height: 50px;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        transition: all 0.4s;
+    }
+
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+    }
