--- a/Leila/CalendarStyle.css
+++ b/Leila/CalendarStyle.css
@@ -18,7 +18,7 @@ body {
 
 .calendar {
     margin: auto;
-    width: 600px;
+    width: 500px;
     background-color: #fff;
     box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.2);
 }
@@ -97,3 +97,9 @@ body {
         background-color: rgba(0, 0, 0, 0.2);
         cursor: pointer;
     }
+
+#hello {
+    background-color: #eee;
+    display: none;
+}
+
